[tool.poetry]
name = "pyswot"
version = "0.3.2"
description = "Python wrapper for JetBrains/swot"
authors = ["James Meakin <pyswot@jmsmkn.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/DIAGNijmegen/rse-pyswot"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-xdist = "*"
pytest-randomly = "*"
pytest-cov = "*"
chardet = "*"
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_first_party = ["pyswot", "tests"]
line_length = 79

[tool.black]
line-length = 79
target-version = ['py38']

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
python_files = "tests.py test_*.py *_tests.py"
addopts = "--strict-markers --showlocals -n auto --dist loadscope"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py38, py39, py310, py311, py312

[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310
    3.11: py311
    3.12: py312

[testenv]
allowlist_externals = poetry
commands =
    poetry install -v
    poetry run pytest --cov-branch --cov-report term-missing --cov=tests/ --cov=pyswot/ --basetemp={envtmpdir} {posargs}
"""
