[project]
authors = [
    {name = "James Meakin"},
]
license = {text = "Apache-2.0"}
requires-python = "<4.0,>=3.9"
dependencies = []
name = "pyswot"
version = "0.4.1"
description = "Python wrapper for JetBrains/swot"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
]

[project.urls]
repository = "https://github.com/DIAGNijmegen/rse-pyswot"

[dependency-groups]
dev = [
    "pytest",
    "pytest-xdist",
    "pytest-randomly",
    "pytest-cov",
    "chardet",
    "black",
]

[tool.isort]
profile = "black"
known_first_party = ["pyswot", "tests"]
line_length = 79

[tool.black]
line-length = 79
target-version = ['py39']

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
python_files = "tests.py test_*.py *_tests.py"
addopts = "--strict-markers --showlocals -n auto --dist loadscope"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py39, py310, py311, py312, py313

[gh-actions]
python =
    3.9: py39
    3.10: py310
    3.11: py311
    3.12: py312
    3.13: py313

[testenv]
dependency_groups =
    dev
commands =
    {envpython} -m pytest --cov-branch --cov-report term-missing --cov=tests/ --cov=pyswot/ --basetemp={envtmpdir} {posargs}
"""

[tool.uv]
package = true
