[project]
authors = [
    {name = "James Meakin"},
]
license = {text = "Apache-2.0"}
requires-python = "<4.0,>=3.10"
dependencies = []
name = "pyswot"
version = "0.5.0"
description = "Python wrapper for JetBrains/swot"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
]

[project.urls]
repository = "https://github.com/DIAGNijmegen/rse-pyswot"

[dependency-groups]
dev = [
    "pytest",
    "pytest-xdist",
    "pytest-randomly",
    "pytest-cov",
    "chardet",
    "black",
    "pre-commit",
]

[tool.isort]
profile = "black"
known_first_party = ["pyswot", "tests"]
line_length = 79

[tool.black]
line-length = 79
target-version = ['py39']

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
python_files = "tests.py test_*.py *_tests.py"
addopts = "--strict-markers --showlocals -n auto --dist loadscope"

[tool.uv]
package = true
